# flairbnb

./: .env.example  .gitignore  ANALYTICS.md  API.md  FEATURES.md  README.md  pyproject.toml
.github/workflows/: sync.yml
config/: india_events.yaml  markets.yaml
sql/: 001_init.sql  002_views.sql  003_calendar_history.sql  004_p1_analytics.sql
src/: __init__.py  api.py  calendarinfo.py  db.py  details.py  experience.py  host.py  host_details.py  parse.py  price.py  reviews.py  search.py  standardize.py  start.py  utils.py
src/pipeline/: __init__.py  __main__.py  bulk.py  discover.py  enrich.py  markets.py  metrics.py  occupancy.py  seed.py  sync.py  util.py
src/webapi/: __init__.py  app.py  deps.py
tests/: test_bulk.py  test_integration.py  test_occupancy.py  test_pipeline.py  test_public_api.py  test_search_helpers.py  test_standardize.py  test_utils.py  test_webapi.py
