[project]
name = "flairbnb"
version = "0.1.0"
description = "Flairbnb backend — Airbnb listing search, details, prices, and reviews"
requires-python = ">=3.10"
dependencies = [
  "curl_cffi",
  "bs4",
  "requests",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flairbnb"]
package-dir = {"flairbnb" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: hits live Airbnb APIs (network required)",
]
